[package]
name = "ncc"
version = "0.1.0"
edition = "2021"
description = "NetCat Chess"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "4"
rand = "0.8.5"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "io-util", "macros"] }
vss = "0.1"
