[package]
name = "ncc"
version = "0.1.0"
edition = "2021"
description = "NetCat Chess"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
owo-colors = "4"
parking_lot = "0.12.1"
rand = "0.8.5"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "io-util", "macros", "time"] }
vss = "0.1"
